--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "bcryptjs": "^2.4.3",
     "express-validator": "^7.2.0",
     "http-status-codes": "^2.3.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2"
   }
 }
