--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,7 @@
 DATABASE_URL='mysql://root:123456@localhost:3306/deleveryapp'
+CLOUDINARY_CLOUD_NAME=du1w6cmsb
+CLOUDINARY_API_KEY=146687588727535
+CLOUDINARY_API_KEY=3mN7eDxKFDjyAJifzGenOuY_ZgQ
+CLOUDINARY_Upload_preset=aauez9ty
+cloud_name = 'du1w6cmsb'
+preset_key = 'aauez9ty'
