--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.19.1",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "express-validator": "^7.2.0",
     "http-status-codes": "^2.3.0",
