"Updated DemandeController, NotificationController, added new routes and functionality"

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "next": "14.2.9",
+    "nginx": "^1.0.8",
     "react": "^18",
     "react-dom": "^18",
     "zod": "^3.23.8"
